# Solution-Server

./: .gitignore  CMakeLists.txt  backup_code  main.cpp  makefile  python_test  test_parallel.py  test_serial.py
CacheManager/: CacheManager.h  FileCacheManager.cpp  FileCacheManager.h
ClientHandler/: ClientHandler.h  MyClientHandler.cpp  MyClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h  TestClientHandler.cpp  TestClientHandler.h
Searchable/: MatrixSearchable.cpp  MatrixSearchable.h  Searchable.h
Searcher/: AStar.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  DepthFirstSearch.h  DequeSearcher.h  MySearcher.cpp  MySearcher.h  PriorityQueueSearcher.cpp  PriorityQueueSearcher.h  PriorityState.h  Searchable.h  Searcher.h  State.h  StateCompare.h  StringReverser.cpp  StringReverser.h
Searcher/ConcreteSearchables/: MatrixSearchable.h
Server/: InputStream.cpp  InputStream.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  OutputStream.cpp  OutputStream.h  Server.h  SocketStream.cpp  SocketStream.h  TCPServer.cpp  TCPServer.h
Solver/: SearcherSolver.cpp  SearcherSolver.h  Solver.h
Tester/: ModuleTester.cpp  ModuleTester.h  SearcherTester.cpp  SearcherTester.h  Tester.cpp  Tester.h
